--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/animejs": "^3.1.13",
+    "animejs": "^3.2.2",
     "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
