--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/animejs": "^3.1.13",
     "animejs": "^3.2.2",
+    "framer-motion": "^12.23.26",
     "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
